aggiustato un po il codice