@@ -48,22 +48,22 @@ public class BeansConfig {
 
         @Bean
         public Pizze getPizzaMargherita(){
-            return new Pizze("Margherita", 5, "700 kcal");
+            return new Pizze("Margherita", 5, "700 kcal", List.of(getPomodoro(), getMozzarella()));
         }
 
     @Bean
     public Pizze getPizzaDiavola(){
-        return new Pizze("Diavola", 6, "910 kcal");
+        return new Pizze("Diavola", 6, "910 kcal", List.of(getPomodoro(), getMozzarella(), getSalame()));
     }
 
     @Bean
     public Pizze getPizzaCapricciosa(){
-        return new Pizze("Capricciosa", 5, "1100 kcal");
+        return new Pizze("Capricciosa", 5, "1100 kcal", List.of(getPomodoro(), getMozzarella(), getFunghi()));
     }
 
     @Bean
     public Pizze getPizzaMarinara(){
-        return new Pizze("Marinara", 5, "950 kcal");
+        return new Pizze("Marinara", 5, "950 kcal", List.of(getPomodoro()));
     }
 
     @Bean
@@ -82,24 +82,8 @@ public class BeansConfig {
     }
 
 
-    //Definisco una lista di Topping
     @Bean
-    public List<Toppings> listaToppings() {
-        return Arrays.asList(getFunghi(), getCipolla(), getMozzarella(), getSalame(), getSalsiccia(), getPomodoro());
+    public Menu Menu(){
+            return new Menu(List.of(getPizzaMargherita(), getPizzaDiavola(), getPizzaCapricciosa(), getPizzaMarinara()), List.of(getSalame(), getCipolla(), getFunghi(), getMozzarella(), getPomodoro(), getSalsiccia()), List.of(getSprite(), getCoca(), getFanta()));
     }
-
-    //Lista di pizze
-    @Bean
-    public List<Pizze> listaPizze(){
-            return Arrays.asList(getPizzaMargherita(), getPizzaDiavola(), getPizzaCapricciosa(), getPizzaMarinara());
-    }
-
-    @Bean
-    public List<Bevande> listaBevande(){
-        return Arrays.asList(getCoca(), getFanta(), getSprite());
-    }
-
-    public Menu getMenu(List<Pizze> listaPizze, List<Toppings> listaToppings, List<Bevande> listaBevande) {
-        return new Menu(listaPizze, listaToppings, listaBevande);
-        }
 }
